# rust_cmd_lib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/cmd_lib_core/: Cargo.toml
crates/cmd_lib_core/src/: lib.rs  parser.rs  proc_var.rs  process.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: lib.rs
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs
examples/: Cargo.toml  color_output.rs  dd_test.rs  dd_test_with_crates.rs  one_cmd.rs  ping.rs  pipe_fail_test.rs  pipes.rs  pipes.sh  progress.rs  redirect.rs  rust_cookbook.rs  rust_cookbook_external.rs  simple_cmds.rs  test_config_cmds.rs  test_export_cmds.rs  tetris.rs  tetris.sh  tracing.rs
macros/: Cargo.toml
macros/src/: lexer.rs  lib.rs  parser.rs
src/: builtins.rs  child.rs  cmd_fun.rs  cmd_lib.rs  io.rs  lib.rs  logger.rs  main_error.rs  parser.rs  proc_env.rs  process.rs  source_text.rs  sym_table.rs  thread_local.rs
tests/: test_macros.rs
