[package]
name = "cmd_lib"
description = "Common rust commandline macros and utils, to write shell script like tasks easily"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-shell-script/rust_cmd_lib"
repository = "https://github.com/rust-shell-script/rust_cmd_lib"
documentation = "https://docs.rs/cmd_lib"
keywords = ["shell", "script", "cli", "process", "pipe"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"
version = "2.0.0"
authors = ["rust-shell-script <rust-shell-script@gmail.com>"]
edition = "2024"
rust-version = "1.88"

[workspace]
members = ["macros"]

[dependencies]
cmd_lib_macros = { version = "2.0.0", path = "./macros" }
log = "0.4.27"
faccess = "0.2.4"
os_pipe = "1.2.2"
env_logger = "0.11.8"
build-print = { version = "1.0", optional = true }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
rayon = "1.11.0"
clap = { version = "4", features = ["derive"] }
byte-unit = "4.0.19"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[features]
build-print = ["dep:build-print"]

[[example]]
name = "tracing"
required-features = ["tracing"]
