[package]
name = "cmd_lib_macros"
description = "Common rust commandline macros and utils, to write shell script like tasks easily"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-shell-script/rust_cmd_lib"
repository = "https://github.com/rust-shell-script/rust_cmd_lib"
keywords = ["shell", "scripts", "commandline", "subprocess", "pipeline"]
version = "0.11.4"
authors = ["Tao Guo <tao.guo.code@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
