[package]
name = "cmd_lib_macros"
description = "Common rust commandline macros and utils, to write shell script like tasks easily"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-shell-script/rust_cmd_lib"
repository = "https://github.com/rust-shell-script/rust_cmd_lib"
keywords = ["shell", "script", "cli", "process", "pipe"]
version = "1.9.6"
authors = ["Tao Guo <tao.guo.code@gmail.com>"]
edition = "2024"
rust-version = "1.88"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
proc-macro-error2 = "2"

[dev-dependencies]
cmd_lib = { path = ".." }
