[package]
name = "cmd_lib_core"
description = "Common rust commandline macros and utils, to write shell script like tasks easily"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-shell-script/rust_cmd_lib"
repository = "https://github.com/rust-shell-script/rust_cmd_lib"
keywords = ["shell", "scripts", "commandline", "subprocess", "pipeline"]
version = "0.1.0"
authors = ["Tao Guo <tao.guo.code@gmail.com>"]
edition = "2018"
