[package]
name = "cmd_lib_macros"
version = "0.1.0"
authors = ["Tao Guo <tao.guo.code@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
cmd_lib_core = { version = "0.1", path = "../cmd_lib_core" }
