[package]
name = "cmd_lib_macros"
description = "Common rust commandline macros and utils, to write shell script like tasks easily"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rust-shell-script/rust_cmd_lib"
repository = "https://github.com/rust-shell-script/rust_cmd_lib"
keywords = ["shell", "scripts", "commandline", "subprocess", "pipeline"]
version = "0.4.0"
authors = ["Tao Guo <tao.guo.code@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
